# vlsi-agent

./: AGENTS.md  README.md  pyproject.toml  requirements.txt  run.sh
examples/outputs/reports/: fifo_sync.json  fifo_sync_tb.out
examples/outputs/rtl/: fifo_sync.sv
scripts/: run_flow.py
specs/: fifo.yaml
src/vlsi_agent/: __init__.py  cli.py  flow.py
src/vlsi_agent/generators/: __init__.py  rtl.py
src/vlsi_agent/ir/: __init__.py  fifo.py
src/vlsi_agent/models/: __init__.py  spec.py
src/vlsi_agent/parsers/: __init__.py  yaml_loader.py
src/vlsi_agent/templates/: fifo.sv.j2  fifo_tb.sv.j2  openroad_flow.tcl.j2  run_iverilog.sh.j2  run_verilator.sh.j2  run_yosys.sh.j2
tests/: test_flow.py  test_validation.py
